style(contactpage):overflowed letter fixed in mobile devices

--- a/src/sass/pages/_contactpage.scss
+++ b/src/sass/pages/_contactpage.scss
@@ -4,6 +4,7 @@
 main.contact {
   padding:20px;
   max-width:100%;
+  height:60vh;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -18,6 +19,7 @@ main.contact {
     height:100%;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     @include medium {
       align-items: center;
       justify-content: center;
